src/test/ui/proc-macro/proc-macro-gates2.stderr
error[E0658]: The attribute `a` is currently unknown to the compiler and may have meaning added to it in the future (see issue #29642)
  --> $DIR/proc-macro-gates2.rs:13:11
   |
LL | fn _test6<#[a] T>() {}
   |           ^^^^
   |
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `a` is currently unknown to the compiler and may have meaning added to it in the future (see issue #29642)
  --> $DIR/proc-macro-gates2.rs:18:9
   |
LL |         #[a] //~ ERROR: unknown to the compiler
   |         ^^^^
   |
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
